[package]
name = "rom-splitter"
version = "0.2.0"
edition = "2024"
description = "Split rom files into directories"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/dberg/rom-splitter"
repository = "https://github.com/dberg/rom-splitter"

[dependencies]
ap = { git = "https://github.com/dberg/ap.git" }
thiserror = "2"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

